fix: align content

--- a/app/components/token-list/style.scss
+++ b/app/components/token-list/style.scss
@@ -1,8 +1,9 @@
 & {
-  padding: 10px 10px;
+  margin: 10px 0;
 
   .token-descripton {
     color: $sd-text-med;
+    padding-left: 4px;
   }
   table {
     width: 100%;
