--- a/app/styles/user-settings.scss
+++ b/app/styles/user-settings.scss
@@ -1,5 +1,5 @@
 .user-preference {
-  margin: 10px 10px;
+  margin: 10px 15px;
   color: $sd-text;
 
   .float-right {
@@ -10,6 +10,22 @@
     border-radius: 5px 5px 0 0;
     border: 1px solid $sd-separator;
     margin-bottom: 20px;
+
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+  
+    li {
+      font-size: 14px;
+      padding: 15px 10px;
+      border-bottom: 1px solid $sd-separator;
+  
+      &:last-child {
+        border-width: 0;
+      }
+    }
   }
 
   h3 {
@@ -32,32 +48,6 @@
     margin: 0;
     padding: 6px 0;
     color: $sd-text-med;
-  }
-
-  ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  li {
-    font-size: 14px;
-    padding: 15px 10px;
-    border-bottom: 1px solid $sd-separator;
-
-    &:last-child {
-      border-width: 0;
-    }
-  }
-
-  a {
-    display: inline-block;
-    text-decoration: none;
-    width: 100px;
-    padding: 3px;
-    text-align: center;
-    border-radius: 3px;
-    border: 1px solid transparent;
   }
 
   .right {
